--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -11,9 +11,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".Fragment.HomeFragment"
-        android:layout_marginStart="@dimen/spacing_mlarge"
-        android:layout_marginEnd="@dimen/spacing_mlarge">
+        tools:context=".Fragment.HomeFragment">
 
         <TextView
             android:layout_width="wrap_content"
@@ -24,7 +22,9 @@
             android:text="@string/top_playlist"
             android:textColor="@color/white"
             android:textSize="@dimen/text_heading"
-            android:fontFamily="@font/alata_regular"/>
+            android:fontFamily="@font/alata_regular"
+            android:layout_marginStart="@dimen/spacing_mlarge"
+            android:layout_marginEnd="@dimen/spacing_mlarge"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="@dimen/zero_dimen"
@@ -88,6 +88,7 @@
             android:layout_height="@dimen/card_dimen"
             android:id="@+id/day_two_list"
             android:layout_marginTop="@dimen/spacing_large"
+            android:layout_marginEnd="@dimen/spacing_mlarge"
             app:layout_constraintTop_toBottomOf="@id/top_playlist_textview"
             app:layout_constraintStart_toEndOf="@id/day_one_list"
             app:layout_constraintEnd_toEndOf="parent"
@@ -207,7 +208,8 @@
             app:layout_constraintTop_toBottomOf="@id/day_one_list"
             app:layout_constraintStart_toEndOf="@id/day_three_list"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginStart="@dimen/spacing_mxlarge">
+            android:layout_marginStart="@dimen/spacing_mxlarge"
+            android:layout_marginEnd="@dimen/spacing_mlarge">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -264,6 +266,8 @@
             app:layout_constraintTop_toBottomOf="@id/day_four_list"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="@dimen/spacing_mxlarge"
+            android:layout_marginStart="@dimen/spacing_mlarge"
+            android:layout_marginEnd="@dimen/spacing_mlarge"
             android:text="Upcoming Hits"
             android:textColor="@color/white"
             android:fontFamily="@font/alata_regular"
@@ -272,11 +276,58 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/upcomingHitsRecycler"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/upcoming"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="@dimen/spacing_middle"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/item_search"/>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/loaderLayout"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:clickable="true"
+            android:focusable="true"
+            android:visibility="gone">
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/overlay_dark_90"
+                android:alpha="0.9"/>
+
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/loaderImage"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/loaderText"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintVertical_chainStyle="packed"
+                android:scaleType="centerCrop"
+                android:layout_width="@dimen/card_dimen"
+                android:layout_height="@dimen/card_dimen"
+                app:lottie_fileName="loading.json"
+                app:lottie_autoPlay="true"
+                app:lottie_loop="true"/>
+
+            <TextView
+                android:id="@+id/loaderText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/loaderImage"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintVertical_chainStyle="packed"
+                android:text="FETCHING DATA..."
+                android:textSize="@dimen/text_big"
+                android:textColor="@color/grey_20"
+                android:fontFamily="@font/alata_regular"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
