--- a/app/src/main/res/layout/fragment_play_list.xml
+++ b/app/src/main/res/layout/fragment_play_list.xml
@@ -162,7 +162,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/daySummary"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                android:layout_marginTop="@dimen/spacing_mlarge"/>
+                android:layout_marginTop="@dimen/spacing_mlarge"
+                android:layout_marginBottom="@dimen/spacing_mlarge"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
