--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorPrimaryDark"
-        android:alpha="0.7"/>
+        android:alpha="0.75"/>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/itemCardView"
@@ -26,6 +26,7 @@
         app:layout_constraintBottom_toBottomOf="parent">
 
         <ImageView
+            android:alpha="0.9"
             android:id="@+id/itemEventImageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -43,11 +44,12 @@
         android:ellipsize="end"
         android:textColor="@color/grey_20"
         app:layout_constraintStart_toEndOf="@+id/itemCardView"
-        app:layout_constraintEnd_toStartOf="@id/itemMoreImageView"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintBottom_toTopOf="@id/itemEventDate"
-        android:layout_marginStart="@dimen/spacing_middle"/>
+        android:layout_marginStart="@dimen/spacing_middle"
+        android:layout_marginEnd="@dimen/spacing_mlarge"/>
 
     <TextView
         android:id="@+id/itemEventDate"
@@ -58,22 +60,11 @@
         android:text="Day 1   •   12:00"
         android:textColor="@color/grey_40"
         app:layout_constraintStart_toEndOf="@+id/itemCardView"
-        app:layout_constraintEnd_toStartOf="@id/itemMoreImageView"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/itemEventName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintVertical_chainStyle="packed"
-        android:layout_marginStart="@dimen/spacing_middle"/>
-
-    <ImageView
-        android:id="@+id/itemMoreImageView"
-        android:layout_width="26dp"
-        android:layout_height="26dp"
-        android:src="@drawable/ic_more_vert_black_24dp"
-        android:tint="@color/grey_20"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="@dimen/spacing_middle"
         android:layout_marginEnd="@dimen/spacing_mlarge"/>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
