--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -120,6 +120,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/timeLayout"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@id/layoutButtons"
         android:layout_marginBottom="20dp">
 
