--- a/app/src/main/res/layout/fragment_intro2.xml
+++ b/app/src/main/res/layout/fragment_intro2.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/overlay_dark_90">
+    android:background="#000">
 
-</LinearLayout>
+    <ImageView
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_margin="20dp"
+        android:src="@drawable/final002"/>
+
+</RelativeLayout>
