--- a/app/src/main/res/layout/fragment_intro3.xml
+++ b/app/src/main/res/layout/fragment_intro3.xml
@@ -2,6 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/overlay_dark_90">
+    android:background="#000">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/final003"
+        android:layout_margin="20dp"/>
 
 </LinearLayout>
