--- a/app/src/main/res/layout/fragment_info_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_info_bottom_sheet.xml
@@ -257,6 +257,7 @@
                         app:layout_constraintTop_toBottomOf="@id/layoutPrize2" />
 
                     <LinearLayout
+                        android:id="@+id/contactLayout"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical"
